--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -1,5 +1,9 @@
 {
     "python.linting.flake8Enabled": true,
+    "python.linting.flake8Args": [
+        "--max-line-length=88",
+        "--ignore=E203,W503"
+    ],
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.formatting.provider": "black",
