--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -1,12 +1,13 @@
 {
+    "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
         "--max-line-length=88",
         "--ignore=E203,W503"
     ],
-    "python.linting.enabled": true,
+    "python.linting.mypyEnabled": true,
     "python.linting.lintOnSave": true,
     "python.formatting.provider": "black",
-    "python.jediEnabled": false,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "python.jediEnabled": false
 }
