--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -9,5 +9,10 @@
     "python.linting.lintOnSave": true,
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "[python]": {
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        }
+    }
 }
