--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -16,7 +16,10 @@
         }
     },
     "python.sortImports.args": [
-        "-rc",
-        "-l=88"
+        "--multi-line=3",
+        "--trailing-comma",
+        "--force-grid-wrap=0",
+        "--use-parentheses",
+        "--line-width=88",
     ],
 }
