--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+# OS
 .DS_Store
+
+# editor
 .idea/
 .vscode/
+
+# python
 .python-version
 __pycache__/
 .mypy_cache/
 .ipynb_checkpoints/
+.venv/
 
+# my utility
 hiho*
