--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -1,4 +1,5 @@
 {
+    "python.venvPath": ".venv",
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
