--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -11,7 +11,7 @@
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     "python.jediEnabled": false,
-    "python.languageServer": "Microsoft",
+    "python.languageServer": "Pylance",
     "[python]": {
         "editor.codeActionsOnSave": {
             "source.organizeImports": true
