--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -6,7 +6,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
         "--max-line-length=88",
-        "--ignore=E203,W503"
+        "--ignore=E203,W503,E741"
     ],
     "python.linting.mypyEnabled": true,
     "python.linting.lintOnSave": true,
