--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -1,7 +1,5 @@
 {
-    "python.venvFolders": [
-        ".venv"
-    ],
+    "python.pythonPath": "${workspaceFolder}/.venv",
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
