--- a/vscode/python-extensions.json
+++ b/vscode/python-extensions.json
@@ -6,7 +6,7 @@
         "ms-toolsai.jupyter",
         "oderwat.indent-rainbow",
         "redhat.vscode-yaml",
-        "github.copilot",
+        "github.copilot"
     ],
     "unwantedRecommendations": []
 }
