--- a/vscode/python-settings.json
+++ b/vscode/python-settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "${workspaceFolder}/.venv",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
